# JiraTools

./: .commit_template  .gitmodules  CMakeLists.txt  README.md  main.cpp  resources.qrc
app/: CMakeLists.txt  main.cpp  menustatemachine.scxml  networkfactory.cpp  networkfactory.h  qtquickcontrols2.conf  resources.qrc
app/qml/: AvatarImage.qml  BoardSelectionPage.qml  CredentialsInputPage.qml  ErrorMessagePopup.qml  HomePage.qml  JiraProxy.qml  Main.qml  MainMenuPane.qml  MenuStateMachine.qml  PageBase.qml  ServerSelectionPage.qml  ToolEntryDelegate.qml  WelcomePage.qml  YesNoPopup.qml  main.qml  qmldir
app/qml/base/: View.qml  qmldir
app/qml/bricks/: JiraItem.qml  Label.qml  SubView.qml  TopMenu.qml  View.qml  qmldir
app/qml/controls/: AvatarImage.qml  ErrorMessagePopup.qml  MainMenuPane.qml  ToolEntryDelegate.qml  qmldir
app/qml/forms/: LoginForm.qml  qmldir
app/qml/pages/: BoardSelectionPage.qml  CredentialsInputPage.qml  HomePage.qml  PageBase.qml  ServerSelectionPage.qml  WelcomePage.qml  qmldir
app/qml/subviews/: DashboardSubView.qml  qmldir
app/qml/utils/: Urls.js  qmldir
app/qml/views/: LoginView.qml  MainView.qml  Urls.js  qmldir
qml/: Main.qml
qml/bricks/: ActionButton.qml  CheckBox.qml  InputField.qml  Label.qml  qmldir
qml/forms/: LoginForm.qml
