cmake_minimum_required(VERSION 3.16)

project(jiratools VERSION 0.1.0 LANGUAGES CXX)

find_package(Qt5 REQUIRED COMPONENTS Gui Qml QuickControls2)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

set(QML_JIRA_PLUGIN_BUILD_TESTS OFF)
set(QML_JIRA_PLUGIN_BUILD_EXAMPLES OFF)
add_subdirectory(jira)
add_subdirectory(app)
